# advent-of-code-2021

./: AdventOfCode.cabal  default.nix  shell.nix
src/: AdventOfCode.hs
src/AdventOfCode/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Inputs.hs
