cabal-version:      2.4
name:               AdventOfCode2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vitor Capela
maintainer:         vitor@braunecapela.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable adventofcode-2021-exe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall

library
    exposed-modules:     AdventOfCode
    other-modules:       AdventOfCode.Inputs
                       , AdventOfCode.Day1
                       , AdventOfCode.Day2
    -- other-extensions:
    build-depends:       base ^>=4.14.3.0
                       , containers
                       , megaparsec
                       , lens
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options: -Wall
